# asn1_codecs_bench

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
asn/: sample.asn  telco_sample.asn
benches/: sample.rs  simple_asn1rs.rs  simple_types.rs  telco_sample.rs
src/: asn1rs_helpers.rs  asn1rs_telco_helpers.rs  hampi_helpers.rs  hampi_telco_helpers.rs  lib.rs  main.rs  rasn_helpers.rs  rasn_telco_helpers.rs  sample.asn  sample_asn1rs.rs  sample_hampi.rs  sample_rasn.rs
