[package]
name = "asn1_codecs_bench"
version = "0.2.0"
edition = "2021"

[dependencies]
asn1-codecs = "0.7.0"
asn1_codecs_derive = "0.7.0"
asn1rs = "0.3.1"
bitvec = "1"
log = { version = "0.4", features = ["release_max_level_info"] }
lazy_static = "1.4"
rasn = "0.22.0"

[dev-dependencies]
criterion = "0.5.1"

[build-dependencies]
rasn-compiler = "0.6.1"
asn1-compiler = "0.7.0"
asn1rs = "0.3.1"

[[bench]]
name = "sample"
harness = false

[[bench]]
name = "simple_types"
harness = false

[profile.release]
lto = true # Enable Link-Time Optimization
codegen-units = 1 # Enable single codegen unit for better optimization
