[package]
name = "asn1_codecs_bench"
version = "0.2.2"
edition = "2024"

[dependencies]
asn1-codecs = "0.7.2"
asn1_codecs_derive = "0.7.2"
asn1rs = "0.3.1"
bitvec = "1"
log = { version = "0.4", features = ["release_max_level_info"] }
lazy_static = "1.4"
rasn = "0.27.2"

[dev-dependencies]
criterion = "0.7"

[build-dependencies]
rasn-compiler = "0.14.3"
asn1-compiler = "0.7.2"
asn1rs = "0.3.1"

[[bench]]
name = "sample"
harness = false

[[bench]]
name = "simple_types"
harness = false

[profile.release]
lto = true # Enable Link-Time Optimization
codegen-units = 1 # Enable single codegen unit for better optimization
