[package]
name = "asn1_codecs_bench"
version = "0.2.4"
edition = "2024"

[dependencies]
asn1-codecs = "0.7.2"
asn1_codecs_derive = "0.7.2"
asn1rs = "0.3.1"
bitvec = "1.0.1"
log = { version = "0.4.30", features = ["release_max_level_info"] }
rasn = "0.28.13"

[dev-dependencies]
criterion = "0.8.2"

[build-dependencies]
rasn-compiler = "0.16.0"
asn1-compiler = "0.7.2"
asn1rs = "0.3.1"

[[bench]]
name = "sample"
harness = false

[[bench]]
name = "simple_types"
harness = false

[[bench]]
name = "telco_sample"
harness = false

[profile.release]
lto = true # Enable Link-Time Optimization
codegen-units = 1 # Enable single codegen unit for better optimization
